--- a/nest/config.json
+++ b/nest/config.json
@@ -6,7 +6,7 @@
     "log_level": "INFO",
     "plot_results": true,
     "readme_in_stats_folder": true,
-    "show_progress_bar": false,
+    "show_progress_bar": true,
     "show_tcp_module_parameter_confirmation": true,
     "routing_suite": "quagga",
     "routing_logs": false
